--- a/src/index.html
+++ b/src/index.html
@@ -9,5 +9,6 @@
   </head>
   <body>
     <app-root></app-root>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDgMbJOuT_L5IOZRZvFI7DFP8dcGJN4i5o&amp;libraries=places"></script>
   </body>
 </html>
